- Initialized the NodeList class