@@ -1,9 +1,10 @@
 'use strict';
 
-class NamedNodeMap {
+const BasicMap = require('../util/basicMap');
+
+class NamedNodeMap extends BasicMap {
   constructor() {
-    this.length = 0;
-    this.map = [];
+    super();
   }
   /**
    * Gets the Attr with the corresponding name
@@ -15,17 +16,6 @@ class NamedNodeMap {
       if (this.map[i].name === name) {
         return this.map[i];
       }
-    }
-    return null;
-  }
-  /**
-   * Returns the Attr at the specified index
-   * @param  {Number} index The desired index
-   * @return {Attr}         The corresponding Attr object, or null if the index is out of bounds
-   */
-  item(index) {
-    if (index > -1 && index < this.length) {
-      return this.map[index];
     }
     return null;
   }
