@@ -1,11 +1,12 @@
 'use strict';
 
-class NodeList {
+const BasicMap = require('../utils/basicMap');
+
+class NodeList extends BasicMap {
   constructor() {
-    this.length = 0;
+    super();
   }
   // @TODO
-  item() {}
   entries() {}
   forEach() {}
   keys() {}
